--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <title>Cookies Demo</title>
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
