--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="topnav">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
-        <a href="courseware.html">Shopping</a>
+        <a href="courseware2.html">Shopping</a>
         <a href="enquiry.html">Enquiry</a>
         <a href="project.html">Project</a>
         <div class="dropdown" style="float:right">  
@@ -79,6 +79,6 @@
  <div class="footer">
   <h3>Yakecan</h3>
  </div>
-<script src="cart.js"></script>   
+<script src="script.js"></script>   
 </body>
 </html>
