--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@
   
         <button type="button" onclick="loginUser()">Login</button>  
     </form> 
-    <script src="cart.js"></script>
+    <script src="script.js"></script>
    
 </body>  
 </html>
