--- a/register.html
+++ b/register.html
@@ -20,7 +20,7 @@
   <div class="topnav">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
-    <a href="courseware.html">Shopping</a>
+    <a href="courseware2.html">Shopping</a>
     <a href="enquiry.html">Enquiry</a>
     <a href="project.html">Project</a>
     <div class="dropdown" style="float:right">  
@@ -55,6 +55,6 @@
         <button type="button" onclick="registerUser()">Register</button>  
     </form>
     
-        <script src="cart.js"></script> 
+        <script src="script.js"></script> 
 </body>  
 </html>
